--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://blu3mo.github.io/clonedle/"
+  "homepage": "https://blu3mo.github.io/clonedle/",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
